feat: add approval queue ad brain and math engine