@@ -8,7 +8,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -30,16 +30,26 @@ public class BudgetOptimizationEngineTest {
         Campaign c = new Campaign();
         c.setName("Festive Watch scale-up");
         c.setStatus("ACTIVE");
-        c.setBudget(100.0);
+        c.setBudget(10_000.0);
+        c.setSpent(2_000.0);
+        c.setCpl(300.0);
         c.setRoas(4.5);
 
-        when(campaignRepo.findByAccountId(accountId)).thenReturn(Collections.singletonList(c));
+        Campaign weak = new Campaign();
+        weak.setName("Legacy Awareness");
+        weak.setStatus("ACTIVE");
+        weak.setBudget(10_000.0);
+        weak.setSpent(3_000.0);
+        weak.setCpl(800.0);
+        weak.setRoas(1.0);
+
+        when(campaignRepo.findByAccountId(accountId)).thenReturn(List.of(c, weak));
 
         BudgetRecommendation rec = engine.optimizeBudgets(accountId);
 
         assertNotNull(rec);
         assertFalse(rec.getUnderfundedCampaigns().isEmpty());
-        assertFalse(rec.getOverfundedCampaigns().isEmpty()); // Fallback mock check
-        assertTrue(rec.getWasteDetected() >= 0.0);
+        assertFalse(rec.getOverfundedCampaigns().isEmpty());
+        assertTrue(rec.getWasteDetected() > 0.0);
     }
 }
